--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <main>
          <!--Герой-->
         <section class="hero">
-            <div class="container">
-                <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+            <div class="container hero-content">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <a class="button-hero" href="#">Заказать услугу</a>
             </div>
         </section>
 
         <!--Особенности-->
-        <section class="section">
+        <section class="section section-features">
             <div class="container">
                 <h2 class="section-title visually-hidden">Особенности</h2>
                 <ul class="features-list">
@@ -79,8 +79,8 @@
         </section>
 
         <!--Наша команда-->
-        <section class="section background">
-            <div class="container team-container">
+        <section class="section section-team">
+            <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="item">
