оптимизированы jpg, линию в хедере указана как border, а не outline

--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
     </main>
 
     <footer class="footer">
-       <div class="container flex-address">
+        <div class="container flex-footer">
             <a href="./" class="logo-header logo-footer">
                 <span>Web</span>Studio
             </a>
-            <address class="hover">
+            <address class="flex-address">
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <p><a href="mailto:info@example.com" class="contacts">info@example.com</a></p>
                 <p><a href="tel:+380991111111" class="contacts">+38 099 111 11 11</a></p>
             </address>
-       </div>
-    </footer>    
+        </div>
+    </footer>
 
 </body>
 </html>
