--- a/index.html
+++ b/index.html
@@ -46,19 +46,31 @@
             <div class="container">
                 <h2 class="section-title visually-hidden">Особенности</h2>
                 <ul class="features-list">
-                    <li class="item">
+                    <li class="features-item">
+                        <svg class="features-icon">
+                            <use href="../images/symbol-defs.svg#icon-antenna"></use>
+                        </svg>
                         <h3>Внимание к деталям</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="item">
+                    <li class="features-item icon-clock">
+                        <svg class="features-icon">
+                            <use href="../images/symbol-defs.svg#icon-clock"></use>
+                        </svg>
                         <h3>Пунктуальность</h3>
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="item">
+                    <li class="features-item icon-diagram">
+                        <svg class="features-icon">
+                            <use href="../images/symbol-defs.svg#icon-diagram"></use>
+                        </svg>
                         <h3>Планирование</h3>
                         <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="item">
+                    <li class="features-item icon-astronaut">
+                        <svg class="features-icon">
+                            <use href="../images/symbol-defs.svg#icon-astronaut"></use>
+                        </svg>
                         <h3>Современные технологии</h3>
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -114,6 +126,58 @@
                 </ul>
             </div>
         </section>
+
+        <!--Постоянные клиенты-->
+       <section class="section">
+           <div class="container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="clients-list">
+                    <li class="clients-item">
+                        <a class="clients-link" href="#">
+                            <svg class="clients-icon" width="44px" height="49px">
+                                <use href="../images/symbol-defs.svg#icon-logo1"></use>
+                            </svg> 
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="#">
+                            <svg class="clients-icon" width="40px" height="52px">
+                                <use href="../images/symbol-defs.svg#icon-logo2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="#">
+                            <svg class="clients-icon" width="41px" height="42px">
+                                <use href="../images/symbol-defs.svg#icon-logo3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="#">
+                            <svg class="clients-icon" width="80px" height="42px">
+                                <use href="../images/symbol-defs.svg#icon-logo4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="#">
+                            <svg class="clients-icon" width="59px" height="47px">
+                                <use href="../images/symbol-defs.svg#icon-logo5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="#">
+                            <svg class="clients-icon" width="88px" height="45px">
+                                <use href="../images/symbol-defs.svg#icon-logo6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    
+                </ul>
+           </div>
+       </section>
     </main>
 
     <footer class="footer">
