выставлены иконки для секции постоянных клиентов

--- a/index.html
+++ b/index.html
@@ -26,8 +26,22 @@
                 </ul>
             </nav>
             <ul class="contacts-nav">
-                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li class="item"><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item">
+                    <a href="mailto:info@devstudio.com" class="link nav-icon">
+                        <svg class="header-icon">
+                            <use href="../images/symbol-defs.svg#icon-envelope" width="16px" height="12px"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="item">
+                    <a href="+380961111111" class="link">
+                        <svg class="header-icon">
+                            <use href="../images/symbol-defs.svg#icon-smartphone" width="10px" height="16px"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
@@ -100,6 +114,36 @@
                         <div class="team-content">
                             <h3>Игорь Демьяненко</h3>
                             <p>Product designer</p>
+                            <ul class="team-icon-list" >
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
