исправлен путь к svg-иконкам

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="item">
                     <a href="mailto:info@devstudio.com" class="link nav-icon">
                         <svg class="header-icon">
-                            <use href="../images/symbol-defs.svg#icon-envelope" width="16px" height="12px"></use>
+                            <use href="./images/symbol-defs.svg#icon-envelope" width="16px" height="12px"></use>
                         </svg>
                         info@devstudio.com
                     </a>
@@ -37,7 +37,7 @@
                 <li class="item">
                     <a href="+380961111111" class="link">
                         <svg class="header-icon">
-                            <use href="../images/symbol-defs.svg#icon-smartphone" width="10px" height="16px"></use>
+                            <use href="./images/symbol-defs.svg#icon-smartphone" width="10px" height="16px"></use>
                         </svg>
                         +38 096 111 11 11
                     </a>
@@ -62,28 +62,28 @@
                 <ul class="features-list">
                     <li class="features-item">
                         <svg class="features-icon">
-                            <use href="../images/symbol-defs.svg#icon-antenna"></use>
+                            <use href="./images/symbol-defs.svg#icon-antenna"></use>
                         </svg>
                         <h3>Внимание к деталям</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="features-item icon-clock">
                         <svg class="features-icon">
-                            <use href="../images/symbol-defs.svg#icon-clock"></use>
+                            <use href="./images/symbol-defs.svg#icon-clock"></use>
                         </svg>
                         <h3>Пунктуальность</h3>
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="features-item icon-diagram">
                         <svg class="features-icon">
-                            <use href="../images/symbol-defs.svg#icon-diagram"></use>
+                            <use href="./images/symbol-defs.svg#icon-diagram"></use>
                         </svg>
                         <h3>Планирование</h3>
                         <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="features-item icon-astronaut">
                         <svg class="features-icon">
-                            <use href="../images/symbol-defs.svg#icon-astronaut"></use>
+                            <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                         </svg>
                         <h3>Современные технологии</h3>
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
@@ -118,28 +118,28 @@
                                 <li>
                                     <a class="team-icon-hover" href="#">
                                         <svg class="team-icon" width="44px" height="49px">
-                                            <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="team-icon-hover" href="#">
                                         <svg class="team-icon" width="44px" height="49px">
-                                            <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="team-icon-hover" href="#">
                                         <svg class="team-icon" width="44px" height="49px">
-                                            <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="team-icon-hover" href="#">
                                         <svg class="team-icon" width="44px" height="49px">
-                                            <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -179,42 +179,42 @@
                     <li class="clients-item">
                         <a class="clients-link" href="#">
                             <svg class="clients-icon" width="44px" height="49px">
-                                <use href="../images/symbol-defs.svg#icon-logo1"></use>
+                                <use href="./images/symbol-defs.svg#icon-logo1"></use>
                             </svg> 
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="#">
                             <svg class="clients-icon" width="40px" height="52px">
-                                <use href="../images/symbol-defs.svg#icon-logo2"></use>
+                                <use href="./images/symbol-defs.svg#icon-logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="#">
                             <svg class="clients-icon" width="41px" height="42px">
-                                <use href="../images/symbol-defs.svg#icon-logo3"></use>
+                                <use href="./images/symbol-defs.svg#icon-logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="#">
                             <svg class="clients-icon" width="80px" height="42px">
-                                <use href="../images/symbol-defs.svg#icon-logo4"></use>
+                                <use href="./images/symbol-defs.svg#icon-logo4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="#">
                             <svg class="clients-icon" width="59px" height="47px">
-                                <use href="../images/symbol-defs.svg#icon-logo5"></use>
+                                <use href="./images/symbol-defs.svg#icon-logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="#">
                             <svg class="clients-icon" width="88px" height="45px">
-                                <use href="../images/symbol-defs.svg#icon-logo6"></use>
+                                <use href="./images/symbol-defs.svg#icon-logo6"></use>
                             </svg>
                         </a>
                     </li>
