добавлены для секции команды иконки соцсетей

--- a/index.html
+++ b/index.html
@@ -151,6 +151,36 @@
                         <div class="team-content">
                             <h3>Ольга Репина</h3>
                             <p>Frontend Developer</p>
+                            <ul class="team-icon-list">
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -158,6 +188,36 @@
                         <div class="team-content">
                             <h3>Николай Тарасов</h3>
                             <p>Marketing</p>
+                            <ul class="team-icon-list">
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -165,6 +225,36 @@
                         <div class="team-content">
                             <h3>Михаил Ермаков</h3>
                             <p>UI Designer</p>
+                            <ul class="team-icon-list">
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="team-icon-hover" href="#">
+                                        <svg class="team-icon" width="44px" height="49px">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
