--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <a href="./" class="logo-header logo-footer">
                 <span>Web</span>Studio
             </a>
-            <address class="flex-address">
+            <address class="flex-address hover">
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <p><a href="mailto:info@example.com" class="contacts">info@example.com</a></p>
                 <p><a href="tel:+380991111111" class="contacts">+38 099 111 11 11</a></p>
