--- a/portfolio.html
+++ b/portfolio.html
@@ -119,14 +119,49 @@
     
     <footer class="footer">
         <div class="container flex-footer">
-            <a href="./" class="logo-header logo-footer">
-                <span>Web</span>Studio
-            </a>
-            <address class="flex-address">
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <p><a href="mailto:info@example.com" class="contacts">info@example.com</a></p>
-                <p><a href="tel:+380991111111" class="contacts">+38 099 111 11 11</a></p>
-            </address>
+            <div class="footer-address">
+                <a href="./" class="logo-header logo-footer">
+                    <span>Web</span>Studio
+                </a>
+                <address class="flex-address hover">
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    <p><a href="mailto:info@example.com" class="contacts">info@example.com</a></p>
+                    <p><a href="tel:+380991111111" class="contacts">+38 099 111 11 11</a></p>
+                </address>
+            </div>
+            <div class="footer-social">
+                <h3 class="social-links-title">Присоединяйтесь</h3>
+                <ul class="footer-social-list">
+                    <li>
+                        <a class="footer-social-link" href="#">
+                            <svg class="footer-icon" width="44px" height="49px">
+                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer-social-link" href="#">
+                            <svg class="footer-icon" width="44px" height="49px">
+                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer-social-link" href="#">
+                            <svg class="footer-icon" width="44px" height="49px">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer-social-link" href="#">
+                            <svg class="footer-icon" width="44px" height="49px">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
