сделаны иконки в header

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             </nav>
             <ul class="contacts-nav">
                 <li class="item">
-                    <a href="mailto:info@devstudio.com" class="link nav-icon">
-                        <svg class="header-icon">
-                            <use href="./images/symbol-defs.svg#icon-envelope" width="16px" height="12px"></use>
+                    <a href="mailto:info@devstudio.com" class="nav-icon">
+                        <svg class="contacts-icon" width="16px" height="12px">
+                            <use href="./images/symbol-defs.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
                 <li class="item">
-                    <a href="+380961111111" class="link">
-                        <svg class="header-icon">
-                            <use href="./images/symbol-defs.svg#icon-smartphone" width="10px" height="16px"></use>
+                    <a href="+380961111111" class="nav-icon">
+                        <svg class="contacts-icon" width="10px" height="16px">
+                            <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
                     </a>
