--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,22 @@
                 </ul>
             </nav>
             <ul class="contacts-nav">
-                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li class="item"><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item">
+                    <a href="mailto:info@devstudio.com" class="nav-icon">
+                        <svg class="contacts-icon" width="16px" height="12px">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="item">
+                    <a href="+380961111111" class="nav-icon">
+                        <svg class="contacts-icon" width="10px" height="16px">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
@@ -130,33 +144,33 @@
                 </address>
             </div>
             <div class="footer-social">
-                <h3 class="social-links-title">Присоединяйтесь</h3>
+                <h3 class="footer-social-title">Присоединяйтесь</h3>
                 <ul class="footer-social-list">
                     <li>
                         <a class="footer-social-link" href="#">
                             <svg class="footer-icon" width="44px" height="49px">
-                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="footer-social-link" href="#">
                             <svg class="footer-icon" width="44px" height="49px">
-                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="footer-social-link" href="#">
                             <svg class="footer-icon" width="44px" height="49px">
-                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="footer-social-link" href="#">
                             <svg class="footer-icon" width="44px" height="49px">
-                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
