карточки портфолио сделаны как ссылки

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,67 +62,85 @@
                 <!-- Портфолио -->
                 <ul class="pfl-list">
                     <li class="pfl-item">
-                        <img src="./images/technokrjak.jpg" alt="Технокряк" width="370">
-                        <div class="pfl-content">
-                            <h2 class="pfl-title">Технокряк</h2>
-                            <p class="pfl-text">Веб-сайт</p>
-                        </div>
+                        <a class="pfl-link" href="#">
+                            <img src="./images/technokrjak.jpg" alt="Технокряк" width="370">
+                            <div class="pfl-content">
+                                <h2 class="pfl-title">Технокряк</h2>
+                                <p class="pfl-text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="pfl-item">
-                        <img src="./images/new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                        <div class="pfl-content">
-                            <h2 class="pfl-title">Постер New Orlean vs Golden Star</h2>
-                            <p class="pfl-text">Дизайн</p>
-                        </div>
+                        <a href="#" class="pfl-link">
+                            <img src="./images/new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                            <div class="pfl-content">
+                                <h2 class="pfl-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="pfl-text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="pfl-item">
-                        <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370">
-                        <div class="pfl-content">
-                            <h2 class="pfl-title">Ресторан Seafood</h2>
-                            <p class="pfl-text">Приложение</p>
-                        </div>
+                        <a href="" class="pfl-link">
+                            <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370">
+                            <div class="pfl-content">
+                                <h2 class="pfl-title">Ресторан Seafood</h2>
+                                <p class="pfl-text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="pfl-item">
-                        <img src="./images/prime.jpg" alt="Проект Prime" width="370">
-                        <div class="pfl-content">
-                            <h2 class="pfl-title">Проект Prime</h2>
-                            <p class="pfl-text">Маркетинг</p>
-                        </div>
+                        <a href="#" class="pfl-link">
+                            <img src="./images/prime.jpg" alt="Проект Prime" width="370">
+                            <div class="pfl-content">
+                                <h2 class="pfl-title">Проект Prime</h2>
+                                <p class="pfl-text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="pfl-item">
-                        <img src="./images/boxes.jpg" alt="Проект Boxes" width="370">
-                        <div class="pfl-content">
-                            <h2 class="pfl-title">Проект Boxes</h2>
-                            <p class="pfl-text">Приложение</p>
-                        </div>
+                        <a href="#" class="pfl-link">
+                            <img src="./images/boxes.jpg" alt="Проект Boxes" width="370">
+                            <div class="pfl-content">
+                                <h2 class="pfl-title">Проект Boxes</h2>
+                                <p class="pfl-text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="pfl-item">
-                        <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370">
-                        <div class="pfl-content">
-                            <h2 class="pfl-title">Inspiration has no Borders</h2>
-                            <p class="pfl-text">Веб-сайт</p>
-                        </div>
+                        <a href="#" class="pfl-link">
+                            <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370">
+                            <div class="pfl-content">
+                                <h2 class="pfl-title">Inspiration has no Borders</h2>
+                                <p class="pfl-text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="pfl-item">
-                        <img src="./images/limited.jpg" alt="Издание Limited Edition" width="370">
-                        <div class="pfl-content">
-                            <h2 class="pfl-title">Издание Limited Edition</h2>
-                            <p class="pfl-text">Дизайн</p>
-                        </div>
+                        <a href="#" class="pfl-link">
+                            <img src="./images/limited.jpg" alt="Издание Limited Edition" width="370">
+                            <div class="pfl-content">
+                                <h2 class="pfl-title">Издание Limited Edition</h2>
+                                <p class="pfl-text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="pfl-item">
-                        <img src="./images/lab.jpg" alt="Проект LAB" width="370">
-                        <div class="pfl-content">
-                            <h2 class="pfl-title">Проект LAB</h2>
-                            <p class="pfl-text">Маркетинг</p>
-                        </div>
+                        <a href="#" class="pfl-link">
+                            <img src="./images/lab.jpg" alt="Проект LAB" width="370">
+                            <div class="pfl-content">
+                                <h2 class="pfl-title">Проект LAB</h2>
+                                <p class="pfl-text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="pfl-item">
-                        <img src="./images/business.jpg" alt="Growing Business" width="370">
-                        <div class="pfl-content">
-                            <h2 class="pfl-title">Growing Business</h2>
-                            <p class="pfl-text">Приложение</p>
-                        </div>
+                        <a href="#" class="pfl-link">
+                            <img src="./images/business.jpg" alt="Growing Business" width="370">
+                            <div class="pfl-content">
+                                <h2 class="pfl-title">Growing Business</h2>
+                                <p class="pfl-text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
